--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,54 @@
 node_modules/
 dist/
+
+# dependencies
+.pnp
+.pnp.js
+
+# build outputs
+build/
+lib/
+out/
+
+# environment files
+.env
+.env.local
+.env.*.local
+
+# logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# testing
+coverage/
+.nyc_output/
+
+# caches
+.cache/
+.parcel-cache/
+.turbo/
+.eslintcache
+
+# TypeScript build info
+*.tsbuildinfo
+tsconfig.tsbuildinfo
+
+# editors/IDE
+.idea/
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+!.vscode/tasks.json
+!.vscode/launch.json
+
+# OS
+.DS_Store
+
+# temp
+tmp/
+temp/
+.tmp/
